# wireguard-config-manager

./: LICENSE  README.md  pyproject.toml  setup.py
data/: config.ini  hi.txt.gpg  v2ray config example.json
plugin_v2ray/: v2ray.py
test/: test_encrypt_plugin.py  test_import_extension.py  test_lead_service.py  test_load_service.py  test_semver.py  test_ui_main.py  test_wg_core.py
wg_config_manager/: default config.ini  errors.py  load_plugin.py  logger.py  main.py  storage.py  version.py  wireguard_core.py
wg_config_manager/gpg/: gpg.py
wg_config_manager/graphic_interface/: __init__.py  core.py  ui_main.py  widgets.py
wg_config_manager/v2ray/: v2ray.py
